// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserService Create should create a user without profile and banner 1`] = `
{
  "bio": "bio",
  "id": "1",
  "name": "John Doe",
  "profileImg": null,
  "username": "johndoe",
}
`;

exports[`UserService FindOne should find a user 1`] = `
{
  "user": {
    "bio": "bio",
    "createdAt": 2000-01-01T00:00:00.000Z,
    "followers": 0,
    "following": 0,
    "isActive": true,
    "name": "John Doe",
    "profileImg": null,
    "username": "johndoe",
  },
}
`;

exports[`UserService GetFollowers should get a user followers 1`] = `
{
  "count": 1,
  "users": [
    {
      "name": "John Doe",
      "profileImg": null,
      "username": "johndoe",
    },
  ],
}
`;

exports[`UserService GetFollowings should get a user followings 1`] = `
{
  "count": 1,
  "users": [
    {
      "name": "John Doe",
      "profileImg": null,
      "username": "johndoe",
    },
  ],
}
`;

exports[`UserService Search should find users by name or username 1`] = `
{
  "count": 1,
  "users": [
    {
      "name": "John Doe",
      "profileImg": null,
      "username": "johndoe",
    },
  ],
}
`;
